# internet-health-monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  compose.yaml  justfile  pipeline.yml  pyproject.toml
.github/workflows/: ci.yml
assets/enrichment/: health_scoring.py
assets/ingestion/: dnssec_validation_BR.asset.yml  dnssec_validation_IN.asset.yml  dnssec_validation_US.asset.yml  https_BR.asset.yml  https_DE.asset.yml  https_IN.asset.yml  https_JP.asset.yml  https_US.asset.yml  ipv6_BR.asset.yml  ipv6_DE.asset.yml  ipv6_IN.asset.yml  ipv6_JP.asset.yml  ipv6_US.asset.yml  net_loss_shutdown_BR.asset.yml  net_loss_shutdown_DE.asset.yml  net_loss_shutdown_IN.asset.yml  net_loss_shutdown_JP.asset.yml  net_loss_shutdown_US.asset.yml  roa_4_BR.asset.yml  roa_4_IN.asset.yml  roa_4_JP.asset.yml  roa_4_US.asset.yml  roa_6_BR.asset.yml  roa_6_IN.asset.yml  roa_6_US.asset.yml
assets/transformations/: country_rankings.sql  dnssec_combined.sql  dnssec_validation_combined.sql  https_combined.sql  internet_health_summary.sql  ipv6_combined.sql  net_loss_combined.sql  roa_combined.sql
config/: countries.yaml
dashboard/: app.py  constants.py
dashboard/components/: __init__.py  choropleth_map.py  kpi_card.py  navbar.py
dashboard/data/: __init__.py  queries.py
dashboard/layouts/: __init__.py  country_comparison.py  metric_detail.py  overview.py  shutdowns.py  timeseries.py
scripts/: conftest.tpl  countries.py  generate_assets.py
tests/: conftest.py  test_app.py  test_chart_functions.py  test_dashboard.py  test_health_scoring.py  test_layout_errors.py  test_queries.py
(+145 files in other folders)
