[project]
name = "internet-health-monitor"
version = "0.1.0"
description = "Internet Health Monitor - Bruin pipeline with ISOC Pulse data"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "dash>=2.14.0",
    "plotly>=5.18.0",
    "dash-bootstrap-components>=1.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "ty>=0.0.29",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dashboard", "tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
